--- a/package.json
+++ b/package.json
@@ -1,31 +1,30 @@
 {
-  "name": "caatingaboat",
-  "version": "0.1.0",
-  "description": "Caatinga boat é um projeto \t\tue usa arduino para construção de barcos  rádio controlados usando XBEE ou NRF24l0. O projeto visa o baixo custo e o reuso de componentes.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "github.com/jefersonla/caatingaboat.git"
-  },
-  "keywords": [
-    "Barcos",
-    "nautimodelismo",
-    "rádio",
-    "controle",
-    "xbee",
-    "arduino",
-    "nrf",
-    "RC"
-  ],
-  "author": "Jeferson Lima <@jefersonla>",
-  "license": "MIT",
-  "dependencies": {
-    "gamepad": "^1.4.2",
-    "node-gyp": "^3.6.2",
-    "serialport": "^5.0.0",
-    "xbox-controller": "^0.7.0"
-  }
+    "name": "caatingaboat",
+    "version": "0.1.0",
+    "description": "Caatinga boat é um projeto \t\tue usa arduino para construção de barcos  rádio controlados usando XBEE ou NRF24l0. O projeto visa o baixo custo e o reuso de componentes.",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "github.com/jefersonla/caatingaboat.git"
+    },
+    "keywords": [
+        "Barcos",
+        "nautimodelismo",
+        "rádio",
+        "controle",
+        "xbee",
+        "arduino",
+        "nrf",
+        "RC"
+    ],
+    "author": "Jeferson Lima <@jefersonla>",
+    "license": "MIT",
+    "dependencies": {
+        "gamepad": "^1.4.2",
+        "node-gyp": "^3.6.2",
+        "serialport": "^5.0.0"
+    }
 }
